--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -60,11 +60,15 @@ jobs:
   root-test:
     needs: install-root
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version:
+          - 16
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -81,6 +85,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        node-version:
+          - 16
         # Rivendell will auto-expand to each package
         package:
           - name: default-import
@@ -127,7 +133,7 @@ jobs:
           fetch-depth: ${{ inputs.depth }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -159,11 +165,15 @@ jobs:
       # which implicitly requires all packages built
       - package-test-4
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version:
+          - 16
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - run: |
           for TARBALL in ./tarballs/*.tgz
             do
@@ -226,7 +236,7 @@ jobs:
         id: hash-build
         with:
           path: ./tarballs/${{ matrix.package.safe-name }}.tgz
-          key: ${{ runner.os }}-package-${{ matrix.package.name }}-${{
+          key: ${{ runner.os }}-package-name-${{ matrix.package.name }}-${{
             steps.rivendell.outputs.hash }}
 
       # If cache missed build the package
@@ -294,7 +304,7 @@ jobs:
         id: hash-build
         with:
           path: ./tarballs/${{ matrix.package.safe-name }}.tgz
-          key: ${{ runner.os }}-package-${{ matrix.package.name }}-${{
+          key: ${{ runner.os }}-package-name-${{ matrix.package.name }}-${{
             steps.rivendell.outputs.hash }}
 
       # If cache missed build the package
@@ -359,7 +369,7 @@ jobs:
         id: hash-build
         with:
           path: ./tarballs/${{ matrix.package.safe-name }}.tgz
-          key: ${{ runner.os }}-package-${{ matrix.package.name }}-${{
+          key: ${{ runner.os }}-package-name-${{ matrix.package.name }}-${{
             steps.rivendell.outputs.hash }}
 
       # If cache missed build the package
@@ -421,7 +431,7 @@ jobs:
         id: hash-build
         with:
           path: ./tarballs/${{ matrix.package.safe-name }}.tgz
-          key: ${{ runner.os }}-package-${{ matrix.package.name }}-${{
+          key: ${{ runner.os }}-package-name-${{ matrix.package.name }}-${{
             steps.rivendell.outputs.hash }}
 
       # If cache missed build the package
@@ -483,7 +493,7 @@ jobs:
         id: hash-build
         with:
           path: ./tarballs/${{ matrix.package.safe-name }}.tgz
-          key: ${{ runner.os }}-package-${{ matrix.package.name }}-${{
+          key: ${{ runner.os }}-package-name-${{ matrix.package.name }}-${{
             steps.rivendell.outputs.hash }}
 
       # If cache missed build the package
@@ -509,6 +519,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        node-version:
+          - 16
         package:
           - name: default-import
             safe-name: default-import
@@ -531,7 +543,7 @@ jobs:
           fetch-depth: ${{ inputs.depth }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -562,6 +574,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        node-version:
+          - 16
         package:
           - name: entry-script
             safe-name: entry-script
@@ -578,7 +592,7 @@ jobs:
           fetch-depth: ${{ inputs.depth }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -609,6 +623,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        node-version:
+          - 16
         package:
           - name: barrelify
             safe-name: barrelify
@@ -622,7 +638,7 @@ jobs:
           fetch-depth: ${{ inputs.depth }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -653,6 +669,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        node-version:
+          - 16
         package:
           - name: dependency-order
             safe-name: dependency-order
@@ -663,7 +681,7 @@ jobs:
           fetch-depth: ${{ inputs.depth }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - uses: actions/download-artifact@v3
         with:
           name: build
@@ -694,6 +712,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        node-version:
+          - 16
         package:
           - name: rivendell
             safe-name: rivendell
@@ -704,7 +724,7 @@ jobs:
           fetch-depth: ${{ inputs.depth }}
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ matrix.node-version }}
       - uses: actions/download-artifact@v3
         with:
           name: build
