--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -246,8 +246,8 @@ jobs:
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
-        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz "${{
-          matrix.package.path }}/dist/**"
+        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz ${{
+          matrix.package.path }}/dist/**
 
       # Upload tarball to build artifact (was either built in this run, or used cached version)
       - uses: actions/upload-artifact@v3
@@ -314,8 +314,8 @@ jobs:
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
-        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz "${{
-          matrix.package.path }}/dist/**"
+        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz ${{
+          matrix.package.path }}/dist/**
 
       # Upload tarball to build artifact (was either built in this run, or used cached version)
       - uses: actions/upload-artifact@v3
@@ -379,8 +379,8 @@ jobs:
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
-        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz "${{
-          matrix.package.path }}/dist/**"
+        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz ${{
+          matrix.package.path }}/dist/**
 
       # Upload tarball to build artifact (was either built in this run, or used cached version)
       - uses: actions/upload-artifact@v3
@@ -441,8 +441,8 @@ jobs:
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
-        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz "${{
-          matrix.package.path }}/dist/**"
+        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz ${{
+          matrix.package.path }}/dist/**
 
       # Upload tarball to build artifact (was either built in this run, or used cached version)
       - uses: actions/upload-artifact@v3
@@ -503,8 +503,8 @@ jobs:
 
       # If cache missed (continued) copy files into tarball
       - if: steps.hash-build.outputs.cache-hit != 'true'
-        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz "${{
-          matrix.package.path }}/dist/**"
+        run: tar -zcf ./tarballs/${{ matrix.package.safe-name }}.tgz ${{
+          matrix.package.path }}/dist/**
 
       # Upload tarball to build artifact (was either built in this run, or used cached version)
       - uses: actions/upload-artifact@v3
