--- a/rivendell/.github/workflows/build-and-test.yaml
+++ b/rivendell/.github/workflows/build-and-test.yaml
@@ -238,6 +238,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+      - uses: actions/download-artifact@v3
+        with:
+          name: build
+
       - run: |
           for TARBALL in ./tarballs/*.tgz
             do
