--- a/.github/workflows/publish-dev.yaml
+++ b/.github/workflows/publish-dev.yaml
@@ -1,4 +1,4 @@
-name: Publish Canary
+name: Publish Dev
 on:
   push:
     branches-ignore:
@@ -13,7 +13,7 @@ jobs:
   build-and-test:
     uses: ./.github/workflows/build-and-test.yaml
 
-  publish-canary:
+  publish-dev:
     needs: build-and-test
     runs-on: ubuntu-latest
     strategy:
