--- a/rivendell/.github/workflows/publish-dev.yaml
+++ b/rivendell/.github/workflows/publish-dev.yaml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         package: ${{{ rivendell.all-packages }}}
     steps:
+      - uses: actions/checkout@v3
       # Artifact includes node_modules + all built packages
       - uses: actions/download-artifact@v3
         with:
