Don't track `.rush`

--- a/rivendell/.github/workflows/build-and-test.yaml
+++ b/rivendell/.github/workflows/build-and-test.yaml
@@ -25,7 +25,6 @@ jobs:
         id: cache-install
         with:
           path: |
-            .rush
             common/temp
             apps/*/node_modules
             root/*/node_modules
@@ -44,7 +43,7 @@ jobs:
       # that only needs to live for the rest of the build + test
       - run: |
           mkdir tarballs
-          tar -zcf ./tarballs/rush.tgz .rush common/temp apps/*/node_modules root/*/node_modules tools/*/node_modules
+          tar -zcf ./tarballs/rush.tgz common/temp apps/*/node_modules root/*/node_modules tools/*/node_modules
       - uses: actions/upload-artifact@v3
         with:
           name: build
