Fix script paths

--- a/rivendell/.github/workflows/build-and-test.yaml
+++ b/rivendell/.github/workflows/build-and-test.yaml
@@ -71,8 +71,8 @@ jobs:
       # Ensure symlinks are generated + root files are linted
       # Conceptually barrel + rivendell checks should go here... but files aren't built yet
       - run: |
-          ./scripts/write-symlinks.mjs
-          node ${{ github.workspace }}/common/scripts/install-run-rush.js lint-root
+          ./common/scripts/write-symlinks.mjs
+          node ./common/scripts/install-run-rush.js lint-root
 
   # For each package (matrix.package) run lint tests
   package-lint:
