Use sha instead of hash-all for now

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -229,7 +229,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          echo "::set-output name=hash::${{ hashFiles('**') }}"
+          echo "::set-output name=hash::${{ github.sha }}"
           exit 0
           # TODO use rivendell to hash
           HASH=`npx rivendell hash ${{ matrix.package.name }}`
@@ -297,7 +297,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          echo "::set-output name=hash::${{ hashFiles('**') }}"
+          echo "::set-output name=hash::${{ github.sha }}"
           exit 0
           # TODO use rivendell to hash
           HASH=`npx rivendell hash ${{ matrix.package.name }}`
@@ -362,7 +362,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          echo "::set-output name=hash::${{ hashFiles('**') }}"
+          echo "::set-output name=hash::${{ github.sha }}"
           exit 0
           # TODO use rivendell to hash
           HASH=`npx rivendell hash ${{ matrix.package.name }}`
@@ -424,7 +424,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          echo "::set-output name=hash::${{ hashFiles('**') }}"
+          echo "::set-output name=hash::${{ github.sha }}"
           exit 0
           # TODO use rivendell to hash
           HASH=`npx rivendell hash ${{ matrix.package.name }}`
@@ -486,7 +486,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          echo "::set-output name=hash::${{ hashFiles('**') }}"
+          echo "::set-output name=hash::${{ github.sha }}"
           exit 0
           # TODO use rivendell to hash
           HASH=`npx rivendell hash ${{ matrix.package.name }}`
@@ -548,7 +548,7 @@ jobs:
       - name: Calculate dependency hash
         id: rivendell
         run: |
-          echo "::set-output name=hash::${{ hashFiles('**') }}"
+          echo "::set-output name=hash::${{ github.sha }}"
           exit 0
           # TODO use rivendell to hash
           HASH=`npx rivendell hash ${{ matrix.package.name }}`
