Include rush dir in cache

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -25,6 +25,7 @@ jobs:
         id: cache-install
         with:
           path: |
+            ~/.rush
             common/temp
             apps/*/node_modules
             root/*/node_modules
@@ -44,7 +45,8 @@ jobs:
       # that only needs to live for the rest of the build + test
       - run: |
           mkdir tarballs
-          tar -zcf ./tarballs/rush.tgz common/temp apps/*/node_modules root/*/node_modules tools/*/node_modules
+          RUSH_HOME_DIR=`realpath --relative-to=$PWD $HOME/.rush`
+          tar -zcf ./tarballs/rush.tgz $RUSH_HOME_DIR common/temp apps/*/node_modules root/*/node_modules tools/*/node_modules
       - uses: actions/upload-artifact@v3
         with:
           name: build
