Use ~ instead of env

--- a/rivendell/.github/workflows/build-and-test.yaml
+++ b/rivendell/.github/workflows/build-and-test.yaml
@@ -44,7 +44,7 @@ jobs:
       # that only needs to live for the rest of the build + test
       - run: |
           mkdir tarballs
-          RUSH_HOME_DIR=`realpath --relative-to=$PWD $HOME/.rush`
+          RUSH_HOME_DIR=`realpath --relative-to=$PWD ~/.rush`
           tar -zcf ./tarballs/rush.tgz $RUSH_HOME_DIR common/temp apps/*/node_modules root/*/node_modules tools/*/node_modules
       - uses: actions/upload-artifact@v3
         with:
