--- a/.github/workflows/publish-dev.yaml
+++ b/.github/workflows/publish-dev.yaml
@@ -97,8 +97,8 @@ jobs:
           fi
 
           # Tack on generic License + npmignore
-          cp ../../common/config/publish/LICENSE ./LICENSE
-          cp ../../common/config/publish/.npmignore ./.npmignore
+          cp ${{ github.workspace }}/LICENSE ./LICENSE
+          cp ${{ github.workspace }}/common/config/publish/.npmignore ./.npmignore
 
           # Non-main branches should still publish, but never as "dev". "ignore" tag will be cleaned up.
           if [[ ${{ github.ref_name }} == main ]]
